Test/WpfTestApp/Features/Error/Faulty.xaml
<miruken:View x:Class="WpfTestApp.Features.Error.Faulty"
             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
             xmlns:miruken="clr-namespace:Miruken.Mvc.Wpf;assembly=Miruken.Mvc.Wpf"
             mc:Ignorable="d" 
             d:DesignHeight="300" d:DesignWidth="300">
    <Grid Background="White">
        <Button x:Name="button" Content="Ok" Command="{miruken:Action EndContext}" HorizontalAlignment="center"  VerticalAlignment="Center" Width="75" Margin="114,163,111,117" RenderTransformOrigin="-0.659,-6.359"/>
    </Grid>
</miruken:View>

